vsot/antlr/HTMLParser.py
# Generated from /vsot/antlr/HTMLParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HTMLParser ( Parser ):

    grammarFileName = "HTMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{%'", "'{{'", "'{#'", "'#}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'>'", "'/>'", "'/'", "'='" ]

    symbolicNames = [ "<INVALID>", "TEMPLATE_TAG_OPEN", "TEMPLATE_VARIABLE_OPEN", 
                      "TEMPLATE_COMMENT_OPEN", "TEMPLATE_COMMENT_CLOSE", 
                      "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML_DECLARATION", 
                      "CDATA", "DTD", "SCRIPTLET", "SEA_WS", "SCRIPT_OPEN", 
                      "STYLE_OPEN", "TAG_OPEN", "HTML_TEXT", "TEMPLATE_TAG_CLOSE", 
                      "TEMPLATE_CONTENT", "TEMPLATE_WS", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
                      "TAG_SLASH", "TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", 
                      "SCRIPT_BODY", "SCRIPT_SHORT_BODY", "STYLE_BODY", 
                      "STYLE_SHORT_BODY", "ATTVALUE_VALUE", "ATTRIBUTE" ]

    RULE_templateTag = 0
    RULE_templateComment = 1
    RULE_templateVariable = 2
    RULE_templateContent = 3
    RULE_htmlDocument = 4
    RULE_htmlElements = 5
    RULE_htmlElement = 6
    RULE_htmlContent = 7
    RULE_htmlAttribute = 8
    RULE_htmlAttributeName = 9
    RULE_htmlAttributeValue = 10
    RULE_htmlTagName = 11
    RULE_htmlChardata = 12
    RULE_htmlMisc = 13
    RULE_htmlComment = 14
    RULE_xhtmlCDATA = 15
    RULE_dtd = 16
    RULE_xml = 17
    RULE_scriptlet = 18
    RULE_script = 19
    RULE_scriptBody = 20
    RULE_style = 21
    RULE_styleBody = 22

    ruleNames =  [ "templateTag", "templateComment", "templateVariable", 
                   "templateContent", "htmlDocument", "htmlElements", "htmlElement", 
                   "htmlContent", "htmlAttribute", "htmlAttributeName", 
                   "htmlAttributeValue", "htmlTagName", "htmlChardata", 
                   "htmlMisc", "htmlComment", "xhtmlCDATA", "dtd", "xml", 
                   "scriptlet", "script", "scriptBody", "style", "styleBody" ]

    EOF = Token.EOF
    TEMPLATE_TAG_OPEN=1
    TEMPLATE_VARIABLE_OPEN=2
    TEMPLATE_COMMENT_OPEN=3
    TEMPLATE_COMMENT_CLOSE=4
    HTML_COMMENT=5
    HTML_CONDITIONAL_COMMENT=6
    XML_DECLARATION=7
    CDATA=8
    DTD=9
    SCRIPTLET=10
    SEA_WS=11
    SCRIPT_OPEN=12
    STYLE_OPEN=13
    TAG_OPEN=14
    HTML_TEXT=15
    TEMPLATE_TAG_CLOSE=16
    TEMPLATE_CONTENT=17
    TEMPLATE_WS=18
    TAG_CLOSE=19
    TAG_SLASH_CLOSE=20
    TAG_SLASH=21
    TAG_EQUALS=22
    TAG_NAME=23
    TAG_WHITESPACE=24
    SCRIPT_BODY=25
    SCRIPT_SHORT_BODY=26
    STYLE_BODY=27
    STYLE_SHORT_BODY=28
    ATTVALUE_VALUE=29
    ATTRIBUTE=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TemplateTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.openTag = None # Token
            self.closeTag = None # Token

        def TEMPLATE_TAG_OPEN(self):
            return self.getToken(HTMLParser.TEMPLATE_TAG_OPEN, 0)

        def TEMPLATE_TAG_CLOSE(self):
            return self.getToken(HTMLParser.TEMPLATE_TAG_CLOSE, 0)

        def templateContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.TemplateContentContext)
            else:
                return self.getTypedRuleContext(HTMLParser.TemplateContentContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_templateTag

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateTag" ):
                return visitor.visitTemplateTag(self)
            else:
                return visitor.visitChildren(self)




    def templateTag(self):

        localctx = HTMLParser.TemplateTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_templateTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            localctx.openTag = self.match(HTMLParser.TEMPLATE_TAG_OPEN)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.templateContent()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==HTMLParser.TEMPLATE_CONTENT):
                    break

            self.state = 52
            localctx.closeTag = self.match(HTMLParser.TEMPLATE_TAG_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateCommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPLATE_COMMENT_OPEN(self):
            return self.getToken(HTMLParser.TEMPLATE_COMMENT_OPEN, 0)

        def htmlContent(self):
            return self.getTypedRuleContext(HTMLParser.HtmlContentContext,0)


        def TEMPLATE_COMMENT_CLOSE(self):
            return self.getToken(HTMLParser.TEMPLATE_COMMENT_CLOSE, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_templateComment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateComment" ):
                return visitor.visitTemplateComment(self)
            else:
                return visitor.visitChildren(self)




    def templateComment(self):

        localctx = HTMLParser.TemplateCommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_templateComment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(HTMLParser.TEMPLATE_COMMENT_OPEN)
            self.state = 55
            self.htmlContent()
            self.state = 56
            self.match(HTMLParser.TEMPLATE_COMMENT_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPLATE_VARIABLE_OPEN(self):
            return self.getToken(HTMLParser.TEMPLATE_VARIABLE_OPEN, 0)

        def TEMPLATE_TAG_CLOSE(self):
            return self.getToken(HTMLParser.TEMPLATE_TAG_CLOSE, 0)

        def templateContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.TemplateContentContext)
            else:
                return self.getTypedRuleContext(HTMLParser.TemplateContentContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_templateVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateVariable" ):
                return visitor.visitTemplateVariable(self)
            else:
                return visitor.visitChildren(self)




    def templateVariable(self):

        localctx = HTMLParser.TemplateVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_templateVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(HTMLParser.TEMPLATE_VARIABLE_OPEN)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.templateContent()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==HTMLParser.TEMPLATE_CONTENT):
                    break

            self.state = 64
            self.match(HTMLParser.TEMPLATE_TAG_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPLATE_CONTENT(self):
            return self.getToken(HTMLParser.TEMPLATE_CONTENT, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_templateContent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateContent" ):
                return visitor.visitTemplateContent(self)
            else:
                return visitor.visitChildren(self)




    def templateContent(self):

        localctx = HTMLParser.TemplateContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_templateContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(HTMLParser.TEMPLATE_CONTENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlDocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scriptlet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.ScriptletContext)
            else:
                return self.getTypedRuleContext(HTMLParser.ScriptletContext,i)


        def templateTag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.TemplateTagContext)
            else:
                return self.getTypedRuleContext(HTMLParser.TemplateTagContext,i)


        def templateComment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.TemplateCommentContext)
            else:
                return self.getTypedRuleContext(HTMLParser.TemplateCommentContext,i)


        def templateVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.TemplateVariableContext)
            else:
                return self.getTypedRuleContext(HTMLParser.TemplateVariableContext,i)


        def SEA_WS(self, i:int=None):
            if i is None:
                return self.getTokens(HTMLParser.SEA_WS)
            else:
                return self.getToken(HTMLParser.SEA_WS, i)

        def xml(self):
            return self.getTypedRuleContext(HTMLParser.XmlContext,0)


        def dtd(self):
            return self.getTypedRuleContext(HTMLParser.DtdContext,0)


        def htmlElements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlElementsContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlElementsContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlDocument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlDocument" ):
                return visitor.visitHtmlDocument(self)
            else:
                return visitor.visitChildren(self)




    def htmlDocument(self):

        localctx = HTMLParser.HtmlDocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_htmlDocument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [HTMLParser.SCRIPTLET]:
                        self.state = 68
                        self.scriptlet()
                        pass
                    elif token in [HTMLParser.TEMPLATE_TAG_OPEN]:
                        self.state = 69
                        self.templateTag()
                        pass
                    elif token in [HTMLParser.TEMPLATE_COMMENT_OPEN]:
                        self.state = 70
                        self.templateComment()
                        pass
                    elif token in [HTMLParser.TEMPLATE_VARIABLE_OPEN]:
                        self.state = 71
                        self.templateVariable()
                        pass
                    elif token in [HTMLParser.SEA_WS]:
                        self.state = 72
                        self.match(HTMLParser.SEA_WS)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HTMLParser.XML_DECLARATION:
                self.state = 78
                self.xml()


            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [HTMLParser.SCRIPTLET]:
                        self.state = 81
                        self.scriptlet()
                        pass
                    elif token in [HTMLParser.TEMPLATE_TAG_OPEN]:
                        self.state = 82
                        self.templateTag()
                        pass
                    elif token in [HTMLParser.TEMPLATE_COMMENT_OPEN]:
                        self.state = 83
                        self.templateComment()
                        pass
                    elif token in [HTMLParser.TEMPLATE_VARIABLE_OPEN]:
                        self.state = 84
                        self.templateVariable()
                        pass
                    elif token in [HTMLParser.SEA_WS]:
                        self.state = 85
                        self.match(HTMLParser.SEA_WS)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HTMLParser.DTD:
                self.state = 91
                self.dtd()


            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [HTMLParser.SCRIPTLET]:
                        self.state = 94
                        self.scriptlet()
                        pass
                    elif token in [HTMLParser.TEMPLATE_TAG_OPEN]:
                        self.state = 95
                        self.templateTag()
                        pass
                    elif token in [HTMLParser.TEMPLATE_COMMENT_OPEN]:
                        self.state = 96
                        self.templateComment()
                        pass
                    elif token in [HTMLParser.TEMPLATE_VARIABLE_OPEN]:
                        self.state = 97
                        self.templateVariable()
                        pass
                    elif token in [HTMLParser.SEA_WS]:
                        self.state = 98
                        self.match(HTMLParser.SEA_WS)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HTMLParser.TEMPLATE_TAG_OPEN) | (1 << HTMLParser.TEMPLATE_VARIABLE_OPEN) | (1 << HTMLParser.TEMPLATE_COMMENT_OPEN) | (1 << HTMLParser.HTML_COMMENT) | (1 << HTMLParser.HTML_CONDITIONAL_COMMENT) | (1 << HTMLParser.SCRIPTLET) | (1 << HTMLParser.SEA_WS) | (1 << HTMLParser.SCRIPT_OPEN) | (1 << HTMLParser.STYLE_OPEN) | (1 << HTMLParser.TAG_OPEN))) != 0):
                self.state = 104
                self.htmlElements()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlElementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlElement(self):
            return self.getTypedRuleContext(HTMLParser.HtmlElementContext,0)


        def htmlMisc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlMiscContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlMiscContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlElements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlElements" ):
                return visitor.visitHtmlElements(self)
            else:
                return visitor.visitChildren(self)




    def htmlElements(self):

        localctx = HTMLParser.HtmlElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_htmlElements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HTMLParser.HTML_COMMENT) | (1 << HTMLParser.HTML_CONDITIONAL_COMMENT) | (1 << HTMLParser.SEA_WS))) != 0):
                self.state = 110
                self.htmlMisc()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.htmlElement()
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    self.htmlMisc() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlElement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DummyContext(HtmlElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.HtmlElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def script(self):
            return self.getTypedRuleContext(HTMLParser.ScriptContext,0)

        def templateTag(self):
            return self.getTypedRuleContext(HTMLParser.TemplateTagContext,0)

        def templateComment(self):
            return self.getTypedRuleContext(HTMLParser.TemplateCommentContext,0)

        def templateVariable(self):
            return self.getTypedRuleContext(HTMLParser.TemplateVariableContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDummy" ):
                return visitor.visitDummy(self)
            else:
                return visitor.visitChildren(self)


    class RawTagContext(HtmlElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.HtmlElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def scriptlet(self):
            return self.getTypedRuleContext(HTMLParser.ScriptletContext,0)

        def style(self):
            return self.getTypedRuleContext(HTMLParser.StyleContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawTag" ):
                return visitor.visitRawTag(self)
            else:
                return visitor.visitChildren(self)


    class TagContext(HtmlElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.HtmlElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAG_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(HTMLParser.TAG_OPEN)
            else:
                return self.getToken(HTMLParser.TAG_OPEN, i)
        def htmlTagName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlTagNameContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlTagNameContext,i)

        def TAG_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(HTMLParser.TAG_CLOSE)
            else:
                return self.getToken(HTMLParser.TAG_CLOSE, i)
        def htmlContent(self):
            return self.getTypedRuleContext(HTMLParser.HtmlContentContext,0)

        def TAG_SLASH(self):
            return self.getToken(HTMLParser.TAG_SLASH, 0)
        def htmlAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlAttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlAttributeContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTag" ):
                return visitor.visitTag(self)
            else:
                return visitor.visitChildren(self)


    class SelfClosingTagContext(HtmlElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.HtmlElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAG_OPEN(self):
            return self.getToken(HTMLParser.TAG_OPEN, 0)
        def htmlTagName(self):
            return self.getTypedRuleContext(HTMLParser.HtmlTagNameContext,0)

        def TAG_SLASH_CLOSE(self):
            return self.getToken(HTMLParser.TAG_SLASH_CLOSE, 0)
        def htmlAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlAttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlAttributeContext,i)

        def TAG_CLOSE(self):
            return self.getToken(HTMLParser.TAG_CLOSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelfClosingTag" ):
                return visitor.visitSelfClosingTag(self)
            else:
                return visitor.visitChildren(self)



    def htmlElement(self):

        localctx = HTMLParser.HtmlElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_htmlElement)
        self._la = 0 # Token type
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                localctx = HTMLParser.TagContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(HTMLParser.TAG_OPEN)
                self.state = 124
                self.htmlTagName()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HTMLParser.TAG_NAME:
                    self.state = 125
                    self.htmlAttribute()
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 131
                self.match(HTMLParser.TAG_CLOSE)
                self.state = 132
                self.htmlContent()
                self.state = 133
                self.match(HTMLParser.TAG_OPEN)
                self.state = 134
                self.match(HTMLParser.TAG_SLASH)
                self.state = 135
                self.htmlTagName()
                self.state = 136
                self.match(HTMLParser.TAG_CLOSE)
                pass

            elif la_ == 2:
                localctx = HTMLParser.SelfClosingTagContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(HTMLParser.TAG_OPEN)
                self.state = 139
                self.htmlTagName()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HTMLParser.TAG_NAME:
                    self.state = 140
                    self.htmlAttribute()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 146
                self.match(HTMLParser.TAG_SLASH_CLOSE)
                pass

            elif la_ == 3:
                localctx = HTMLParser.SelfClosingTagContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(HTMLParser.TAG_OPEN)
                self.state = 149
                self.htmlTagName()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HTMLParser.TAG_NAME:
                    self.state = 150
                    self.htmlAttribute()
                    self.state = 155
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 156
                self.match(HTMLParser.TAG_CLOSE)
                pass

            elif la_ == 4:
                localctx = HTMLParser.RawTagContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.scriptlet()
                pass

            elif la_ == 5:
                localctx = HTMLParser.DummyContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.script()
                pass

            elif la_ == 6:
                localctx = HTMLParser.RawTagContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 160
                self.style()
                pass

            elif la_ == 7:
                localctx = HTMLParser.DummyContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 161
                self.templateTag()
                pass

            elif la_ == 8:
                localctx = HTMLParser.DummyContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 162
                self.templateComment()
                pass

            elif la_ == 9:
                localctx = HTMLParser.DummyContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 163
                self.templateVariable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlChardata(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlChardataContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlChardataContext,i)


        def htmlElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlElementContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlElementContext,i)


        def xhtmlCDATA(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.XhtmlCDATAContext)
            else:
                return self.getTypedRuleContext(HTMLParser.XhtmlCDATAContext,i)


        def htmlComment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.HtmlCommentContext)
            else:
                return self.getTypedRuleContext(HTMLParser.HtmlCommentContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlContent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlContent" ):
                return visitor.visitHtmlContent(self)
            else:
                return visitor.visitChildren(self)




    def htmlContent(self):

        localctx = HTMLParser.HtmlContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_htmlContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HTMLParser.SEA_WS or _la==HTMLParser.HTML_TEXT:
                self.state = 166
                self.htmlChardata()

